syntax = "proto3";

package api.rabbit.push;

import "google/api/annotations.proto";

option go_package = "github.com/aide-cloud/moon/api/rabbit/push;push";
option java_multiple_files = true;
option java_package = "api.rabbit.push";

service Config {
	rpc NotifyObject(NotifyObjectRequest) returns (NotifyObjectReply) {
		option (google.api.http) = {
			post: "/v1/rabbit/push/notify"
			body: "*"
		};
	}
}

message NotifyObjectRequest {

}
message NotifyObjectReply {

}
